<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.admin.tutoserevices.HomeActivity"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_weight="0.19" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.32"
        android:fontFamily="casual"
        android:text="@string/texte"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/Envoyer1"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginLeft="90dp"
        android:fontFamily="casual"
        android:onClick="Entrer"
        android:text="@string/entrer"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Fermer1"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginLeft="90dp"
        android:fontFamily="casual"
        android:onClick="Fermer"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:text="@string/Fermer" />

</LinearLayout>
