<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:weightSum="1"
    tools:context="com.example.admin.tutoserevices.AjouterReclamation">


    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/AjouterReclamation"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginLeft="75dp"
        android:fontFamily=""
        android:text="Ajouter Reclamation"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"

        android:textStyle="bold" />

    <TextView
        android:id="@+id/titre1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Titre"
        android:textSize="20dp"

        android:textStyle="bold" />

    <EditText
        android:id="@+id/txttitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Veuillez entrer votre titre"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/th"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dip"
        android:text="Theme:"
        android:textSize="20dp" />


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.17" />

    <TextView
        android:id="@+id/lieux1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="10dip"
        android:text="Lieux:"
        android:textSize="20dp" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textcom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="commentaire"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="saisir votre commentaire"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Select"
        tools:ignore="DuplicateIds" />




    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        app:srcCompat="@android:drawable/ic_menu_report_image" />

    <Button
        android:id="@+id/buttonvalid"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginLeft="90dp"
        android:fontFamily="casual"
        android:text="@string/valider"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2A"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginLeft="90dp"
        android:fontFamily="casual"
        android:text="@string/Annuler"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />


</LinearLayout>

